# strands-a2a-demo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  a2a_client.py  a2a_push_notification_manager.py  agent_client.py  agent_process_manager.py  app_config.py  aws_credentials_helper.py  base_agent.py  configurable_agent.py  coordinator_agent.py  interactive_interface.py  log_viewer.py  pyproject.toml  speak_interface.py  strands_tools_mapping.py  test_interface.py  web_interface.py  webspeak_interface.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
config/: config.toml
web/static/: main.js  style.css
web/templates/: index.html
webspeak/: README.md
webspeak/static/: audio-player-processor.worklet.js  main.js  style.css
webspeak/templates/: index.html
